# DermaBase_DR

./: AboutPage.qml  AppFont.qml  AppSettings.qml  AppTheme.qml  CMakeLists.txt  ConsultationDelegate.qml  CreatePage.qml  DiagnosisDelegate.qml  EditPage.qml  ImageDelegate.qml  LICENSE  LabTestDelegate.qml  Main.qml  PrintPage.qml  ProcedureDelegate.qml  README.md  SearchDelegate.qml  SearchPage.qml  SettingsPage.qml  StarDelegate.qml  StarPage.qml  TreatmentDelegate.qml  UFOButton.qml  UFOCheckBox.qml  UFOComboBox.qml  UFODialog.qml  UFOFullScreen.qml  UFOSection.qml  UFOSideBar.qml  UFOStatusBar.qml  UFOTextArea.qml  UFOTextField.qml  UFOToast.qml  main.cpp
Inno Setup/: Template.iss
modules/: CMakeLists.txt
modules/ContainersModule/: CMakeLists.txt
modules/ContainersModule/include/: consultant.hpp  consultation.hpp  diagnosis.hpp  image.hpp  lab.hpp  lab_test.hpp  procedure.hpp  search_result.hpp  starred_patient.hpp  treatment.hpp
modules/ContainersModule/src/: consultant.cpp  consultation.cpp  diagnosis.cpp  image.cpp  lab.cpp  lab_test.cpp  procedure.cpp  search_result.cpp  starred_patient.cpp  treatment.cpp
modules/DatabaseModule/: CMakeLists.txt
modules/DatabaseModule/include/: database.hpp  database_worker.hpp
modules/DatabaseModule/src/: database.cpp  database_worker.cpp
modules/DateModule/: CMakeLists.txt
modules/DateModule/src/: date.cpp
modules/ModelsModule/: CMakeLists.txt
modules/ModelsModule/include/: consultants_list_model.hpp  diagnoses_list_model.hpp  images_model.hpp  labs_list_model.hpp  patient_consultations_model.hpp  patient_diagnoses_model.hpp  patient_images_model.hpp  patient_lab_tests_model.hpp  patient_procedures_model.hpp  patient_treatments_model.hpp  procedures_list_model.hpp  search_model.hpp  starred_patients_model.hpp  treatments_list_model.hpp
modules/ModelsModule/src/: consultants_list_model.cpp  diagnoses_list_model.cpp  images_model.cpp  labs_list_model.cpp  patient_consultations_model.cpp  patient_diagnoses_model.cpp  patient_images_model.cpp  patient_lab_tests_model.cpp  patient_procedures_model.cpp  patient_treatments_model.cpp  procedures_list_model.cpp  search_model.cpp  starred_patients_model.cpp  treatments_list_model.cpp
modules/NotifierModule/: CMakeLists.txt
modules/NotifierModule/include/: notifier.hpp
modules/NotifierModule/src/: notifier.cpp
modules/PrinterModule/: CMakeLists.txt
modules/PrinterModule/include/: printer.hpp
modules/PrinterModule/src/: printer.cpp
modules/ProxyModule/: CMakeLists.txt
modules/ProxyModule/include/: proxy_filter.hpp
modules/ProxyModule/src/: proxy_filter.cpp
mysql/scripts/windows/: database_backup.bat
mysql/sql/: other.sql  setup.sql
mysql/sql/populate/: consultants.sql  diagnoses.sql  labs.sql  procedures.sql  treatments.sql
resources/: resources.qrc
resources/html/: template.html
