# [[ Add Modules ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/DatabaseModule")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ContainersModule")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ModelsModule")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/DateModule")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/ProxyModule")

# [[ ----------------------------------------------------------------------- ]]
# [[ ----------------------------------------------------------------------- ]]
# [[ Add Modules ]]
